# YONSEI_DAMM

./: .gitmodules  README.md
Desktop/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
Desktop/catkin_ws/devel/include/dxl_gripper/: GripperDistResponse.h
Desktop/catkin_ws/devel/include/ethercat_test/: pos.h  vel.h
Desktop/catkin_ws/devel/include/mobile_platform_description/: JointState.h
Desktop/catkin_ws/devel/include/mservo_msg/: joint_queue.h  traj_1d.h
Desktop/catkin_ws/devel/lib/: libchomp_planner_plugin.so.1.0.10  libmoveit_chomp_optimizer_adapter.so.1.0.10  libmoveit_ompl_interface.so.1.0.10  libmoveit_ompl_planner_plugin.so.1.0.10  libmoveit_planners_chomp.so.1.0.10
Desktop/catkin_ws/devel/lib/moveit_planners_ompl/: generate_state_database  moveit_ompl_planner
Desktop/catkin_ws/devel/lib/moveit_tutorials/: cylinder_segment  motion_planning_api_tutorial  motion_planning_pipeline_tutorial  move_group_interface_tutorial  pick_place_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  robot_model_and_robot_state_tutorial  ros_api_tutorial  state_display_tutorial  visualizing_collisions_tutorial
Desktop/catkin_ws/devel/lib/pkgconfig/: chomp_motion_planner.pc  dualarm_config.pc  dualarm_moveit.pc  dxl_gripper.pc  dynamixel_sdk.pc  ethercat_test.pc  final_config.pc  final_gazebo1.pc  mobile_platform_description.pc  move_robot.pc  moveit_chomp_optimizer_adapter.pc  moveit_planners_chomp.pc  moveit_planners_ompl.pc  moveit_tutorials.pc  mservo_msg.pc  new.pc  ourarm.pc  panda_moveit_config.pc  pilz_industrial_motion_planner.pc  pilz_industrial_motion_planner_testutils.pc  realsense2_camera.pc  realsense2_description.pc
Desktop/catkin_ws/src/dualarm_moveit/config/: dualarm2.rviz  dualarm2.srdf  mobile_platform_description_v1.srdf
Desktop/catkin_ws/src/dualarm_moveit/launch/: dualarm_bringup_rviz2.launch  move_group2.launch  moveit_rviz2.launch  planning_context.launch  planning_context2.launch
Desktop/catkin_ws/src/final_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ourarm.srdf  stomp_planning.yaml
Desktop/catkin_ws/src/final_config/launch/: demo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  ompl_planning_pipeline.launch_backup.xml  planning_context.launch  planning_pipeline.launch.xml  robotic_arm_bringup_rviz.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
Desktop/catkin_ws/src/final_gazebo1/: CMakeLists.txt
Desktop/catkin_ws/src/final_gazebo1/config/: robotic_arm_control.yaml  robotic_arm_gazebo_joint_states.yaml  trajectory_control.yaml
Desktop/catkin_ws/src/final_gazebo1/launch/: arm_test_gazebo.launch  robotic_arm_bringup_gazebo.launch  robotic_arm_gazebo_states.launch  robotic_arm_trajectory_controller.launch  (+1 more)
Desktop/catkin_ws/src/new/: .setup_assistant  CMakeLists.txt  package.xml
Desktop/catkin_ws/src/ourarm/: CMakeLists.txt  package.xml
NUC/catkin_ws/src/: readme.md
NUC/catkin_ws/src/chessboard_tracking/opencv_object_tracking/: CMakeLists.txt
NUC/catkin_ws/src/chessboard_tracking/opencv_object_tracking/include/opencv_object_tracking/: chessboard_tracker.hpp  circle_tracker.hpp
NUC/catkin_ws/src/chessboard_tracking/opencv_object_tracking/src/: chessboard_tracker.cpp
NUC/catkin_ws/src/dualarm_mobile_description/: CMakeLists.txt  package.xml
NUC/catkin_ws/src/dualarm_sensor_msgs/: CMakeLists.txt
NUC/catkin_ws/src/dualarm_sensor_msgs/launch/: laser_magenc.launch
NUC/catkin_ws/src/dualarm_sensor_msgs/msg/: as5047Msg.msg  vl53l1xMsg.msg
NUC/catkin_ws/src/ethercat_test/: CMakeLists.txt
NUC/catkin_ws/src/mobile_bringup_mservo/: CMakeLists.txt  package.xml
NUC/catkin_ws/src/mobile_bringup_mservo/include/mobile_bringup_mservo/: attitude_estimator.hpp  bringup_publisher_mservo.hpp  odom_publisher_mservo.hpp  publisher.h
NUC/catkin_ws/src/mobile_bringup_mservo/launch/: bringup_mservo.launch
NUC/catkin_ws/src/mobile_bringup_mservo/src/: bringup_publisher_camera.cpp  bringup_publisher_mservo.cpp  odom_publisher.cpp  odom_publisher_mservo.cpp
NUC/catkin_ws/src/mobile_control/: CMakeLists.txt  package.xml
NUC/catkin_ws/src/mobile_control/include/mobile_control/: pd_control.hpp  pd_control_odom_feedback.hpp  pd_control_trans1.hpp  pd_control_trans2.hpp  wheel_odometry.hpp
NUC/catkin_ws/src/mobile_control/msg/: base_arm_pose.msg  motorMsg.msg
NUC/catkin_ws/src/mobile_control/src/: example_message_filters.cpp  pd_control.cpp  pd_control_odom.cpp  pd_control_trans.cpp  wheel_odom.cpp
NUC/catkin_ws/src/msgpkg/: CMakeLists.txt
NUC/catkin_ws/src/path_planner/: CMakeLists.txt
NUC/catkin_ws/src/path_planner/include/path_planner/: lidar_localization.hpp  velocity_plan.hpp
NUC/catkin_ws/src/path_planner/msg/: des_traj.msg
NUC/catkin_ws/src/path_planner/src/: localization.cpp  velocity_plan.cpp
NUC/catkin_ws/src/vehicle_control/: CMakeLists.txt
gripper_control/: readme.md
gripper_control/gripper_control/: CMakeLists.txt  package.xml
gripper_control/gripper_control/src/: current_test.cpp  mapping_test.cpp
gripper_control/src/: pwm_control.cpp  pwm_test.cpp
lim/catkin_ws/: readme.md
lim/catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
lim/catkin_ws/dxl_gripper/src/: dxl_gripper_ctrl2.py
lim/catkin_ws/opencv_object_tracking/: CMakeLists.txt
lim/catkin_ws/opencv_object_tracking/include/opencv_object_tracking/: aruco_tracker.hpp  chessboard_pid.cpp  chessboard_pid.h  chessboard_tracker.hpp  orientation_pickup.cpp  orientation_pickup.h
lim/catkin_ws/opencv_object_tracking/launch/: pid_chessboard.launch
lim/catkin_ws/opencv_object_tracking/src/: circle_tracker.cpp  object_filter.cpp
lim/catkin_ws/rplidar_ros/launch/: multiple_lidar.launch  rplidar_arg.launch  sensor.launch
lim/catkin_ws/rplidar_ros/params/: speckle_filter.yaml
lim/catkin_ws/rplidar_ros/scripts/: laserscan_to_pointcloud.py
lim/catkin_ws/src/opencv_object_tracking/: package.xml
(+433 files in other folders)
